spacing fix

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -58,6 +58,6 @@ a {
   }
 
   header, footer {
-    padding: 0 22rem;
+    padding: 0 20rem;
   }
 }
