--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -5,5 +5,5 @@ header {
   @include mixin.flex-col;
   align-items: normal;
   gap: 1rem;
-  margin: 7rem 0 2rem 0;
+  margin: 8rem 0 5rem 0;
 }
