--- a/styles/layout/_skills.scss
+++ b/styles/layout/_skills.scss
@@ -39,7 +39,7 @@ section#skills {
       flex-direction: row-reverse;
 
       .skills-icons {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
       }
     }
   }
